--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
     "ionicons": "^7.0.0",
+    "ng2-search-filter": "^0.5.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.28",
     "tslib": "^2.3.0",
