--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
+    "date-fns": "^2.30.0",
     "ionicons": "^7.0.0",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~7.8.0",
